--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/check-production-safety.js && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -18,8 +18,10 @@
     "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "next": "^14.2.32",
+    "@google-cloud/vision": "^4.3.2",
     "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
