--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.2",
     "exifr": "^7.1.3",
     "next": "^14.2.32",
+    "openai": "^5.23.1",
     "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
