--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "exifr": "^7.1.3",
     "next": "^14.2.32",
     "openai": "^5.23.1",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.3",
     "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
