--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "next": "^14.2.32",
     "openai": "^5.23.1",
     "pdf-lib": "^1.17.1",
-    "qrcode": "^1.5.3",
     "postcss": "^8.4.32",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
