Enhanced Vercel configuration to prevent workers directory detection
- Add version 2 specification to vercel.json
- Add explicit ignores array to prevent workers directory processing
- Update .vercelignore patterns to be more specific
- Should prevent Vercel from treating workers/ocr as separate project

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "installCommand": "npm ci",
@@ -31,5 +32,11 @@
   ],
   "env": {
     "NEXT_PUBLIC_ENABLE_DEV_AUTH": "false"
-  }
+  },
+  "ignores": [
+    "workers/**",
+    ".venv/**",
+    "**/*.pyc",
+    "**/__pycache__/**"
+  ]
 }
