--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/print-env-vars.js && node scripts/check-production-safety.js && next build",
+    "build": "node scripts/check-production-safety.js && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
