Task 20: Added comprehensive test suite including: - Implement end-to-end tests for critical user journeys - Add performance tests for menu loading and OCR processing - Create accessibility tests for WCAG 2.1 AA compliance - Develop load testing scenarios for concurrent user handling - Implement integration tests for external API interactions - Add edge case tests for LLM menu parser - Update package.json with new test scripts - Create detailed testing documentation in docs/ - Configure TypeScript and Jest for enhanced testing infrastructure Comprehensive test coverage ensures system reliability, performance, and user experience across multiple dimensions of the QR Menu application.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:e2e": "jest --testPathPattern=e2e",
+    "test:performance": "jest --testPathPattern=performance",
+    "test:accessibility": "jest --testPathPattern=accessibility",
+    "test:load": "jest --testPathPattern=load",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:edge-cases": "jest --testPathPattern=edge-cases",
+    "test:coverage": "jest --coverage",
+    "test:all": "jest --coverage --verbose",
     "setup-db": "node scripts/setup-database.js",
     "deploy-check": "node scripts/deploy-check.js",
     "deploy:vercel": "vercel --prod"
