NB Tasks 2-10 Implemented AI image generation features including storage setup, image selection logic, and prompt construction service.

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,11 @@
       "maxDuration": 60
     }
   },
+  "git": {
+    "deploymentEnabled": {
+      "main": false
+    }
+  },
   "headers": [
     {
       "source": "/u/(.*)",
