--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:all": "jest --coverage --verbose",
     "setup-db": "node scripts/setup-database.js",
     "deploy-check": "node scripts/deploy-check.js",
-    "deploy:vercel": "vercel --prod"
+    "deploy:vercel": "vercel --prod",
+    "scan:secrets": "node scripts/scan-secrets.js"
   },
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
