NB Task 18: Implement generation analytics tracking and cost alert thresholds for AI image generation

--- a/env.example
+++ b/env.example
@@ -18,3 +18,8 @@ OPENAI_API_KEY=
 # App config
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NODE_ENV=development
+
+# Generation cost alert thresholds (optional; admin analytics)
+# If set, triggers platform metric when exceeded
+GENERATION_ALERT_DAILY_USD=25
+GENERATION_ALERT_MONTHLY_USD=300
