--- a/env.example
+++ b/env.example
@@ -2,6 +2,14 @@
 
 # Google Generative AI ("Nano Banana")
 NANO_BANANA_API_KEY=your_google_api_key_here
+# Optional base URL override for testing
+# NANO_BANANA_BASE_URL=
+
+# Feature flags
+# Backend kill-switch: if true or API key missing, API returns 503
+AI_IMAGE_GENERATION_DISABLED=false
+# Frontend visibility toggle: disables "Create Photo" in UI
+NEXT_PUBLIC_AI_IMAGE_GENERATION_DISABLED=false
 
 # Google Vision API (Python worker)
 # If using application default credentials via JSON string
