--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "exifr": "^7.1.3",
+    "lucide-react": "^0.545.0",
     "next": "^14.2.32",
     "openai": "^5.23.1",
     "pdf-lib": "^1.17.1",
@@ -43,7 +44,8 @@
     "react-hook-form": "^7.48.2",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
