--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "openai": "^5.23.1",
     "pdf-lib": "^1.17.1",
     "postcss": "^8.4.32",
+    "puppeteer": "^24.26.1",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "server-only": "^0.0.1",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
