--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "next": "^14.2.32",
     "openai": "^5.23.1",
     "pdf-lib": "^1.17.1",
+    "@sparticuz/chromium": "^126.0.0",
+    "puppeteer-core": "^24.5.0",
     "postcss": "^8.4.32",
     "puppeteer": "^24.26.1",
     "qrcode": "^1.5.3",
