chore(vercel): Update install command to skip audit and fund checks; add Puppeteer environment variable for build configuration

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,14 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm ci",
+  "installCommand": "npm install --no-audit --no-fund",
   "framework": "nextjs",
   "regions": ["sin1"],
+  "build": {
+    "env": {
+      "PUPPETEER_SKIP_DOWNLOAD": "true"
+    }
+  },
   "git": {
     "deploymentEnabled": {
       "main": false
