fix(vercel): Update serverless function settings to increase memory allocation to 1536MB and reduce maxDuration to 30 seconds for specific API routes

--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,9 @@
   "framework": "nextjs",
   "regions": ["sin1"],
   "functions": {
-    "api/**": {
-      "memory": 1024,
-      "maxDuration": 300,
-      "includeFiles": "node_modules/@sparticuz/chromium/**"
-    },
-    "app/**": {
-      "memory": 1024,
-      "maxDuration": 300,
+    "src/app/api/**/route.ts": {
+      "memory": 1536,
+      "maxDuration": 30,
       "includeFiles": "node_modules/@sparticuz/chromium/**"
     }
   },
