--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,8 +9,24 @@
   "orientation": "portrait-primary",
   "icons": [
     {
+      "src": "/logos/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logos/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/logos/favicon-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
       "src": "/favicon.ico",
-      "sizes": "48x48 32x32 16x16",
+      "sizes": "any",
       "type": "image/x-icon"
     },
     {
