--- a/src/lib/templates/v2/templates/elegant-serif-example.yaml
+++ b/src/lib/templates/v2/templates/elegant-serif-example.yaml
@@ -1,12 +1,12 @@
-id: classic-cards-v2
+id: elegant-serif-example
 version: "2.0.0"
-name: Classic Cards V2
+name: Elegant Serif Example
 
 page:
   size: A4_PORTRAIT
   margins:
-    top: 22.68    # ~8mm in points (reduced by 60%)
-    right: 25.51  # ~9mm (reduced by 40%)
+    top: 22.68
+    right: 25.51
     bottom: 22.68
     left: 25.51
 
@@ -22,7 +22,7 @@ body:
   container:
     type: GRID
     cols: 4
-    rowHeight: 70      # Base row height - ITEM_TEXT_ROW fits in 1 row
+    rowHeight: 70
     gapX: 8
     gapY: 8
 
@@ -40,6 +40,12 @@ tiles:
 
   TITLE:
     region: title
+    style:
+      typography:
+        fontSet: "elegant-serif"
+        fontSize: "3xl"
+        fontWeight: "bold"
+        textAlign: "center"
     contentBudget:
       nameLines: 1
       descLines: 0
@@ -55,43 +61,29 @@ tiles:
     style:
       typography:
         fontSet: "elegant-serif"
-        fontSize: "xl"
+        fontSize: "2xl"
         fontWeight: "semibold"
-        textAlign: "left"
+        textAlign: "center"
         lineHeight: "normal"
-        color: "#696969"
       spacing:
-        paddingLeft: 8
-        paddingTop: 0
-        paddingBottom: 0
-      border:
-        width: 0.5
-        color: "#696969"
-        style: "solid"
-        sides: ["bottom"]
+        paddingLeft: 16
+        paddingTop: 8
+        paddingBottom: 8
+      background:
+        color: "#F5F2D0"
+        borderRadius: 8
     contentBudget:
       nameLines: 1
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 0
       paddingTop: 8
-      paddingBottom: 4
-      totalHeight: 24
+      paddingBottom: 8
+      totalHeight: 40
 
-  # DESIGN DECISION (Issue #5): ITEM_CARD uses rowSpan: 2, ITEM_TEXT_ROW uses rowSpan: 1
-  # 
-  # The grid rowHeight is 70pt (matching ITEM_TEXT_ROW).
-  # ITEM_CARD needs ~140pt total, so it spans 2 rows.
-  # Height formula: rowSpan * rowHeight + (rowSpan - 1) * gapY
-  #   = 2 * 70 + 1 * 8 = 148pt actual height
-  # 
-  # This keeps the grid math clean:
-  #   - Text-only mode: all items use 1 row (70pt)
-  #   - Card mode: all items use 2 rows (148pt with gap)
-  #   - No sparse layouts or wasted space
   ITEM_CARD:
     region: body
-    rowSpan: 2         # 2 rows = 148pt (2×70 + 1×8 gap)
+    rowSpan: 2
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -99,11 +91,11 @@ tiles:
       imageBoxHeight: 70
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 148   # Must match: rowSpan * rowHeight + (rowSpan-1) * gapY
+      totalHeight: 148
 
   ITEM_TEXT_ROW:
     region: body
-    rowSpan: 1         # 1 row × 70pt = 70pt total
+    rowSpan: 1
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -130,10 +122,6 @@ filler:
     - id: filler-icon-1
       style: icon
       content: utensils
-      rowSpan: 2
-    - id: filler-icon-2
-      style: icon
-      content: coffee
       rowSpan: 2
   policy: SEQUENTIAL
 
