--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,13 @@
     "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "Development Scripts/**"]
+  "exclude": [
+    "node_modules", 
+    "Development Scripts/**",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/__tests__/**/*",
+    "debug-*.test.ts",
+    "debug-*.js"
+  ]
 }
