--- a/src/lib/templates/v2/templates/test-template.yaml
+++ b/src/lib/templates/v2/templates/test-template.yaml
@@ -87,7 +87,7 @@ tiles:
 
 policies:
   lastRowBalancing: CENTER
-  showLogoOnPages: [FIRST, SINGLE]
+  showLogoOnPages: [FIRST, CONTINUATION, FINAL, SINGLE]
   repeatSectionHeaderOnContinuation: true
   sectionHeaderKeepWithNextItems: 1
 
