feat(user-approval): Implement user approval system with admin notifications; add user management tab for admin interface and enhance onboarding experience for pending users.

--- a/env.example
+++ b/env.example
@@ -31,3 +31,8 @@ NODE_ENV=development
 # If set, triggers platform metric when exceeded
 GENERATION_ALERT_DAILY_USD=25
 GENERATION_ALERT_MONTHLY_USD=300
+
+# Notifications (Twilio SendGrid)
+SENDGRID_API_KEY=
+ADMIN_EMAIL=
+FROM_EMAIL=noreply@gridmenu.ai
