--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "scan:secrets": "node scripts/scan-secrets.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@sparticuz/chromium": "^126.0.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.5.0",
