feat(new-menu): Allow multiple input menus; Implement auto-refresh functionality for the dashboard to ensure up-to-date data after mutations; add extraction status banner for improved user feedback during image processing and extraction tasks.

--- a/vercel.json
+++ b/vercel.json
@@ -25,5 +25,13 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "src/app/api/extraction/submit/route.ts": {
+      "maxDuration": 120
+    },
+    "src/app/api/extraction/status/[jobId]/route.ts": {
+      "maxDuration": 120
+    }
+  }
 }
