--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.48.2",
     "server-only": "^0.0.1",
     "sharp": "^0.34.4",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "zod": "^3.25.76"
