--- a/src/lib/templates/v2/templates/classic-cards-v2-landscape.yaml
+++ b/src/lib/templates/v2/templates/classic-cards-v2-landscape.yaml
@@ -1,29 +1,29 @@
-id: classic-cards-v2
+id: classic-cards-v2-landscape
 version: "2.0.0"
-name: Classic Cards V2
+name: Classic Cards V2 Landscape
 
 page:
-  size: A4_PORTRAIT
+  size: A4_LANDSCAPE
   margins:
-    top: 22.68    # ~8mm in points (reduced by 60%)
-    right: 25.51  # ~9mm (reduced by 40%)
-    bottom: 22.68
-    left: 25.51
+    top: 20
+    right: 28
+    bottom: 20
+    left: 28
 
 regions:
   header:
-    height: 60
+    height: 50
   title:
-    height: 32
+    height: 28
   footer:
-    height: 45
+    height: 36
 
 body:
   container:
     type: GRID
     cols: 4
-    rowHeight: 70      # Base row height - ITEM_TEXT_ROW fits in 1 row
-    gapX: 8
+    rowHeight: 65
+    gapX: 10
     gapY: 8
 
 tiles:
@@ -33,10 +33,10 @@ tiles:
       nameLines: 0
       descLines: 0
       indicatorAreaHeight: 0
-      imageBoxHeight: 50
+      imageBoxHeight: 40
       paddingTop: 5
       paddingBottom: 5
-      totalHeight: 60
+      totalHeight: 50
 
   TITLE:
     region: title
@@ -47,7 +47,7 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 4
       paddingBottom: 4
-      totalHeight: 32
+      totalHeight: 28
 
   SECTION_HEADER:
     region: body
@@ -59,7 +59,6 @@ tiles:
         fontWeight: "semibold"
         textAlign: "left"
         lineHeight: "normal"
-        color: "#696969"
       spacing:
         paddingLeft: 8
         paddingTop: 0
@@ -74,36 +73,28 @@ tiles:
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 0
-      paddingTop: 8
+      paddingTop: 6
       paddingBottom: 4
-      totalHeight: 24
+      totalHeight: 22
 
-  # DESIGN DECISION (Issue #5): ITEM_CARD uses rowSpan: 2, ITEM_TEXT_ROW uses rowSpan: 1
-  # 
-  # The grid rowHeight is 70pt (matching ITEM_TEXT_ROW).
-  # ITEM_CARD needs ~140pt total, so it spans 2 rows.
+  # ITEM_CARD uses rowSpan: 2 for landscape layout
   # Height formula: rowSpan * rowHeight + (rowSpan - 1) * gapY
-  #   = 2 * 70 + 1 * 8 = 148pt actual height
-  # 
-  # This keeps the grid math clean:
-  #   - Text-only mode: all items use 1 row (70pt)
-  #   - Card mode: all items use 2 rows (148pt with gap)
-  #   - No sparse layouts or wasted space
+  #   = 2 * 65 + 1 * 8 = 138pt actual height
   ITEM_CARD:
     region: body
-    rowSpan: 2         # 2 rows = 148pt (2×70 + 1×8 gap)
+    rowSpan: 2
     contentBudget:
       nameLines: 2
       descLines: 2
       indicatorAreaHeight: 16
-      imageBoxHeight: 70
+      imageBoxHeight: 60
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 148   # Must match: rowSpan * rowHeight + (rowSpan-1) * gapY
+      totalHeight: 138
 
   ITEM_TEXT_ROW:
     region: body
-    rowSpan: 1         # 1 row × 70pt = 70pt total
+    rowSpan: 1
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -111,50 +102,13 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 70
-
-  # FEATURE_CARD: multi-cell tile for featured menu items
-  # Spans 2 columns and 3 rows for visual prominence.
-  # Height formula: 3 * 70 + 2 * 8 = 226pt
-  FEATURE_CARD:
-    region: body
-    colSpan: 2
-    rowSpan: 3
-    contentBudget:
-      nameLines: 2
-      descLines: 3
-      indicatorAreaHeight: 20
-      imageBoxHeight: 100
-      paddingTop: 10
-      paddingBottom: 10
-      totalHeight: 226
-
-  # DECORATIVE_DIVIDER: full-width divider between sections
-  # Height formula: 1 * 70 + 0 * 8 = 70pt
-  DECORATIVE_DIVIDER:
-    region: body
-    colSpan: 4
-    rowSpan: 1
-    contentBudget:
-      nameLines: 0
-      descLines: 0
-      indicatorAreaHeight: 0
-      imageBoxHeight: 0
-      paddingTop: 4
-      paddingBottom: 4
-      totalHeight: 70
-
-dividers:
-  enabled: true
-  style: ornament
-  height: 24
+      totalHeight: 65
 
 policies:
   lastRowBalancing: CENTER
   showLogoOnPages: [FIRST, CONTINUATION, FINAL, SINGLE]
   repeatSectionHeaderOnContinuation: true
   sectionHeaderKeepWithNextItems: 1
-  maxFeaturedPerSection: 1
 
 filler:
   enabled: false
