--- a/src/lib/templates/v2/templates/three-column-modern-v2.yaml
+++ b/src/lib/templates/v2/templates/three-column-modern-v2.yaml
@@ -1,12 +1,12 @@
-id: classic-cards-v2
+id: three-column-modern-v2
 version: "2.0.0"
-name: Classic Cards V2
+name: Three Column Modern V2
 
 page:
   size: A4_PORTRAIT
   margins:
-    top: 22.68    # ~8mm in points (reduced by 60%)
-    right: 25.51  # ~9mm (reduced by 40%)
+    top: 22.68
+    right: 25.51
     bottom: 22.68
     left: 25.51
 
@@ -21,9 +21,9 @@ regions:
 body:
   container:
     type: GRID
-    cols: 4
-    rowHeight: 70      # Base row height - ITEM_TEXT_ROW fits in 1 row
-    gapX: 8
+    cols: 3
+    rowHeight: 70
+    gapX: 10
     gapY: 8
 
 tiles:
@@ -51,17 +51,16 @@ tiles:
 
   SECTION_HEADER:
     region: body
-    colSpan: 4
+    colSpan: 3
     style:
       typography:
-        fontSet: "elegant-serif"
+        fontSet: "modern-sans"
         fontSize: "xl"
         fontWeight: "semibold"
         textAlign: "left"
         lineHeight: "normal"
-        color: "#696969"
       spacing:
-        paddingLeft: 8
+        paddingLeft: 6
         paddingTop: 0
         paddingBottom: 0
       border:
@@ -78,32 +77,24 @@ tiles:
       paddingBottom: 4
       totalHeight: 24
 
-  # DESIGN DECISION (Issue #5): ITEM_CARD uses rowSpan: 2, ITEM_TEXT_ROW uses rowSpan: 1
-  # 
-  # The grid rowHeight is 70pt (matching ITEM_TEXT_ROW).
-  # ITEM_CARD needs ~140pt total, so it spans 2 rows.
+  # ITEM_CARD uses rowSpan: 2 for three-column grid
   # Height formula: rowSpan * rowHeight + (rowSpan - 1) * gapY
   #   = 2 * 70 + 1 * 8 = 148pt actual height
-  # 
-  # This keeps the grid math clean:
-  #   - Text-only mode: all items use 1 row (70pt)
-  #   - Card mode: all items use 2 rows (148pt with gap)
-  #   - No sparse layouts or wasted space
   ITEM_CARD:
     region: body
-    rowSpan: 2         # 2 rows = 148pt (2×70 + 1×8 gap)
+    rowSpan: 2
     contentBudget:
       nameLines: 2
       descLines: 2
       indicatorAreaHeight: 16
-      imageBoxHeight: 70
+      imageBoxHeight: 60
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 148   # Must match: rowSpan * rowHeight + (rowSpan-1) * gapY
+      totalHeight: 148
 
   ITEM_TEXT_ROW:
     region: body
-    rowSpan: 1         # 1 row × 70pt = 70pt total
+    rowSpan: 1
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -112,49 +103,12 @@ tiles:
       paddingTop: 8
       paddingBottom: 8
       totalHeight: 70
-
-  # FEATURE_CARD: multi-cell tile for featured menu items
-  # Spans 2 columns and 3 rows for visual prominence.
-  # Height formula: 3 * 70 + 2 * 8 = 226pt
-  FEATURE_CARD:
-    region: body
-    colSpan: 2
-    rowSpan: 3
-    contentBudget:
-      nameLines: 2
-      descLines: 3
-      indicatorAreaHeight: 20
-      imageBoxHeight: 100
-      paddingTop: 10
-      paddingBottom: 10
-      totalHeight: 226
-
-  # DECORATIVE_DIVIDER: full-width divider between sections
-  # Height formula: 1 * 70 + 0 * 8 = 70pt
-  DECORATIVE_DIVIDER:
-    region: body
-    colSpan: 4
-    rowSpan: 1
-    contentBudget:
-      nameLines: 0
-      descLines: 0
-      indicatorAreaHeight: 0
-      imageBoxHeight: 0
-      paddingTop: 4
-      paddingBottom: 4
-      totalHeight: 70
-
-dividers:
-  enabled: true
-  style: ornament
-  height: 24
 
 policies:
   lastRowBalancing: CENTER
   showLogoOnPages: [FIRST, CONTINUATION, FINAL, SINGLE]
   repeatSectionHeaderOnContinuation: true
   sectionHeaderKeepWithNextItems: 1
-  maxFeaturedPerSection: 1
 
 filler:
   enabled: false
@@ -162,7 +116,7 @@ filler:
     - startRow: 0
       endRow: LAST_CONTENT
       startCol: 0
-      endCol: 3
+      endCol: 2
   tiles:
     - id: filler-icon-1
       style: icon
