feat(demo-pdf): Introduce prewarming of demo PDF cache and enhance export job handling for demo users; update API routes and job processing logic to support demo exports with caching and improved error handling.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "setup-db": "node scripts/setup-database.js",
     "deploy-check": "node scripts/deploy-check.js",
     "deploy:vercel": "vercel --prod",
-    "scan:secrets": "node scripts/scan-secrets.js"
+    "scan:secrets": "node scripts/scan-secrets.js",
+    "prewarm:demo-pdf": "node scripts/prewarm-demo-pdf-cache.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
