--- a/src/lib/templates/v2/templates/italian-v2.yaml
+++ b/src/lib/templates/v2/templates/italian-v2.yaml
@@ -52,6 +52,24 @@ tiles:
   SECTION_HEADER:
     region: body
     colSpan: 2
+    style:
+      typography:
+        fontSet: "elegant-serif"
+        fontSize: "xl"
+        fontWeight: "semibold"
+        textAlign: "center"
+        lineHeight: "normal"
+        textTransform: "uppercase"
+        color: "#3E2C1C"
+      spacing:
+        paddingLeft: 0
+        paddingTop: 4
+        paddingBottom: 4
+      border:
+        width: 1
+        color: "#C9BAA3"
+        style: "solid"
+        sides: ["top", "bottom"]
     contentBudget:
       nameLines: 1
       descLines: 0
@@ -64,6 +82,20 @@ tiles:
   ITEM_CARD:
     region: body
     rowSpan: 2         # 2 rows = 174pt (2x82 + 10 gap)
+    style:
+      typography:
+        name:
+          fontSet: "elegant-serif"
+          fontSize: "xsm"
+          fontWeight: "bold"
+        description:
+          fontSet: "friendly-rounded"
+          fontSize: "xxs"
+          fontWeight: "normal"
+        price:
+          fontSet: "friendly-rounded"
+          fontSize: "xs"
+          fontWeight: "bold"
     contentBudget:
       nameLines: 2
       descLines: 2     # Reduced from 3 to ensure comfortable fit in 174pt
@@ -76,6 +108,20 @@ tiles:
   ITEM_TEXT_ROW:
     region: body
     rowSpan: 1         # Single row = 82pt
+    style:
+      typography:
+        name:
+          fontSet: "elegant-serif"
+          fontSize: "xsm"
+          fontWeight: "bold"
+        description:
+          fontSet: "friendly-rounded"
+          fontSize: "xxs"
+          fontWeight: "normal"
+        price:
+          fontSet: "friendly-rounded"
+          fontSize: "xs"
+          fontWeight: "bold"
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -84,6 +130,28 @@ tiles:
       paddingTop: 8
       paddingBottom: 8
       totalHeight: 82
+
+  FOOTER_INFO:
+    region: footer
+    style:
+      typography:
+        contact:
+          fontSet: "friendly-rounded"
+          fontSize: "xs"
+          fontWeight: "normal"
+      border:
+        width: 1
+        color: "#C9BAA3"
+        style: "solid"
+        sides: ["top"]
+    contentBudget:
+      nameLines: 0
+      descLines: 0
+      indicatorAreaHeight: 0
+      imageBoxHeight: 0
+      paddingTop: 4
+      paddingBottom: 4
+      totalHeight: 32
 
 policies:
   lastRowBalancing: LEFT
