--- a/src/lib/templates/v2/templates/two-column-classic-v2.yaml
+++ b/src/lib/templates/v2/templates/two-column-classic-v2.yaml
@@ -57,17 +57,15 @@ tiles:
         fontSet: "elegant-serif"
         fontSize: "xl"
         fontWeight: "semibold"
-        textAlign: "left"
+        textAlign: "center"
         lineHeight: "normal"
       spacing:
-        paddingLeft: 8
-        paddingTop: 0
-        paddingBottom: 0
-      border:
-        width: 0.5
-        color: "#696969"
-        style: "solid"
-        sides: ["bottom"]
+        paddingLeft: 0
+        paddingTop: 4
+        paddingBottom: 4
+      background:
+        color: "#E8E4C9"
+        borderRadius: 4
     contentBudget:
       nameLines: 1
       descLines: 0
@@ -84,6 +82,20 @@ tiles:
   ITEM_CARD:
     region: body
     rowSpan: 2
+    style:
+      typography:
+        name:
+          fontSet: "elegant-serif"
+          fontSize: "xsm"
+          fontWeight: "bold"
+        description:
+          fontSet: "classic-professional"
+          fontSize: "xxs"
+          fontWeight: "normal"
+        price:
+          fontSet: "classic-professional"
+          fontSize: "xs"
+          fontWeight: "bold"
     contentBudget:
       nameLines: 2
       descLines: 3
@@ -96,6 +108,20 @@ tiles:
   ITEM_TEXT_ROW:
     region: body
     rowSpan: 1
+    style:
+      typography:
+        name:
+          fontSet: "elegant-serif"
+          fontSize: "xsm"
+          fontWeight: "bold"
+        description:
+          fontSet: "classic-professional"
+          fontSize: "xxs"
+          fontWeight: "normal"
+        price:
+          fontSet: "classic-professional"
+          fontSize: "xs"
+          fontWeight: "bold"
     contentBudget:
       nameLines: 2
       descLines: 2
@@ -104,6 +130,28 @@ tiles:
       paddingTop: 8
       paddingBottom: 8
       totalHeight: 80
+
+  FOOTER_INFO:
+    region: footer
+    style:
+      typography:
+        contact:
+          fontSet: "classic-professional"
+          fontSize: "xs"
+          fontWeight: "normal"
+      border:
+        width: 1
+        color: "#D4CFA3"
+        style: "solid"
+        sides: ["top"]
+    contentBudget:
+      nameLines: 0
+      descLines: 0
+      indicatorAreaHeight: 0
+      imageBoxHeight: 0
+      paddingTop: 4
+      paddingBottom: 4
+      totalHeight: 45
 
 policies:
   lastRowBalancing: CENTER
