feat(layout-lab): Enhance layout options with new image mode, texture, and spacer tile features; update API and UI components for improved user experience.

--- a/src/lib/templates/v2/templates/two-column-classic-v2.yaml
+++ b/src/lib/templates/v2/templates/two-column-classic-v2.yaml
@@ -160,7 +160,7 @@ policies:
   sectionHeaderKeepWithNextItems: 1
 
 filler:
-  enabled: false
+  enabled: true
   safeZones:
     - startRow: 0
       endRow: LAST_CONTENT
